2011-11-03  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/poly.spad.pamphlet: Simplify multiplication
	by scalars.

2011-11-03  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Implement small ordinals.
	* src/algebra/ordinal.spad.pamphlet: New file.
	src/algebra/Makefile.in: Adjust.
	src/input/ord.input.pamphlet: New file.
	src/input/Makefile.in: Adjust.

2011-11-02  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/nruncomp.boot: Try to handle self-referential
	conditions.

2011-11-02  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/template.boot: Evaluate all constants in
	lazy way.

2011-10-31  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/multpoly.spad.pamphlet,
	src/algebra/poly.spad.pamphlet,
	src/algebra/polycat.spad.pamphlet: Minor cleanups.

2011-10-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/table.spad.pamphlet,
	src/interp/scan.boot, src/interp/postpar.boot,
	src/interp/compiler.boot, src/interp/br-op1.boot,
	src/interp/vmlisp.lisp: Misc cleanups.

2011-10-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/Makefile.in, src/interp/macros.lisp, 
	src/interp/spad.lisp, src/interp/util.lisp: Smaller depsys.

2011-10-28  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/product.spad.pamphlet: Product(): Rename
	exported functions.
	src/algebra/*: Adjust

2011-10-28  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/twofact.spad.pamphlet: Use smaller fields
	for bivariate factorization.

2011-10-22  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/c-doc.boot: Avoid unescaped '#'.

2011-10-22  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/hyper/macro.c: Fix crash due to unescaped '#'.

2011-10-18  Ralf Hemmecke  <ralf@hemmecke.de>

	* src/algebra/jet.spad.pamphlet: fix Matrix problem
	* src/interp/ax.boot: fix "not" precedence

2011-10-18  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/u32vec.spad.pamphlet,