@@ -1,5 +1,10 @@
 2011-11-03  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
+	* src/interp/nrungo.boot, src/interp/clammed.boot
+	src/boot/initial-env.lisp, src/boot/ptyout.boot: Misc cleanups.
+
+2011-11-03  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
 	* src/algebra/poly.spad.pamphlet: Simplify multiplication
 	by scalars.
 
